# AWS_KMS_PROJECT_V1

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REFLECTIONS.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/dev/: kms-policy.json
config/prod/: kms-policy.json
docs/: README.md  api.md  best-practices.md  deployment.md  envelope-encryption.md  kms-overview.md  security.md  troubleshooting.md
scripts/: create_kms_key.py  create_kms_key.sh  envelope_encryption.py  kms_cli.py  monitoring.py
templates/: index.html
terraform/: alias.tf  kms.tf  main.tf  outputs.tf  variables.tf
tests/: test_app.py  test_encryption.py
